# KMCSpaceFS

./: CMakeLists.txt  Copy.bat  KMCSpaceFS.sln  KMCSpaceFS.vcxproj  KMCSpaceFS.vcxproj.filters  README.md
.github/workflows/: KMCSpaceFS.yml
src/: CSpaceFS.c  Dict.c  Dict.h  KMCSpaceFS-VOL.inf  KMCSpaceFS.c  KMCSpaceFS.h  KMCSpaceFS.inf  KMCSpaceFS.rc.in  KMCSpaceFS_drv.h  KMCSpaceFSioctl.h  Sha3.c  Sha3.h  boot.c  create.c  devctrl.c  dirctrl.c  fastio.c  fileinfo.c  fsctl.c  pnp.c  read.c  registry.c  resource.h  search.c  security.c  volume.c  write.c
